--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "sempoa"]
 	path = sempoa
 	url = https://github.com/gusvinandaellya/sempoa.git
+[submodule "to-kevin"]
+	path = to-kevin
+	url = https://github.com/gusvinandaellya/hbd.git
